@@ -1,5 +1,9 @@
 2009-02-16  Badlop  <badlop@process-one.net>
 
+	* src/ejabberd_config.erl: Check certfiles are readable on server
+	start and listener start (EJAB-753)
+	* src/ejabberd_listener.erl: Likewise
+
 	* src/mod_privacy.erl: Privacy List: deny presence-out all + send
 	presence to: presence is sent (EJAB-255)
 	* src/ejabberd_c2s.erl: Likewise
